@@ -5,35 +5,30 @@ import fuzs.easymagic.config.ServerConfig;
 import fuzs.easymagic.init.ModRegistry;
 import fuzs.easymagic.world.inventory.ModEnchantmentMenu;
 import fuzs.puzzleslib.api.block.v1.entity.TickingBlockEntity;
-import fuzs.puzzleslib.api.container.v1.ListBackedContainer;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.core.HolderLookup;
 import net.minecraft.core.NonNullList;
 import net.minecraft.nbt.CompoundTag;
-import net.minecraft.network.chat.Component;
 import net.minecraft.network.protocol.game.ClientboundBlockEntityDataPacket;
-import net.minecraft.world.*;
+import net.minecraft.world.WorldlyContainer;
 import net.minecraft.world.entity.player.Inventory;
-import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.inventory.AbstractContainerMenu;
 import net.minecraft.world.inventory.ContainerLevelAccess;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
+import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.entity.BaseContainerBlockEntity;
 import net.minecraft.world.level.block.entity.BlockEntityType;
 import net.minecraft.world.level.block.entity.EnchantingTableBlockEntity;
 import net.minecraft.world.level.block.state.BlockState;
-import net.minecraft.world.level.storage.ValueInput;
-import net.minecraft.world.level.storage.ValueOutput;
-import org.jetbrains.annotations.Nullable;
+import org.jspecify.annotations.Nullable;
 
-public class EnchantmentTableWithInventoryBlockEntity extends EnchantingTableBlockEntity implements ListBackedContainer, MenuProvider, WorldlyContainer, TickingBlockEntity {
+public class EnchantingTableContainerBlockEntity extends BaseEnchantingTableContainerBlockEntity implements WorldlyContainer, TickingBlockEntity {
     private final NonNullList<ItemStack> items = NonNullList.withSize(3, ItemStack.EMPTY);
-    private LockCode code = LockCode.NO_LOCK;
 
-    public EnchantmentTableWithInventoryBlockEntity(BlockPos blockPos, BlockState blockState) {
-        super(blockPos, blockState);
+    public EnchantingTableContainerBlockEntity(BlockPos blockPos, BlockState blockState) {
+        super(ModRegistry.ENCHANTING_TABLE_BLOCK_ENTITY_TYPE.value(), blockPos, blockState);
     }
 
     @Override
@@ -42,18 +37,8 @@ public class EnchantmentTableWithInventoryBlockEntity extends EnchantingTableBlo
     }
 
     @Override
-    public void loadAdditional(ValueInput compoundTag) {
-        super.loadAdditional(compoundTag);
-        this.code = LockCode.fromTag(compoundTag);
-        this.items.clear();
-        ContainerHelper.loadAllItems(compoundTag, this.items);
-    }
-
-    @Override
-    protected void saveAdditional(ValueOutput compoundTag) {
-        super.saveAdditional(compoundTag);
-        this.code.addToTag(compoundTag);
-        ContainerHelper.saveAllItems(compoundTag, this.items, true);
+    public void clientTick() {
+        bookAnimationTick(this.getLevel(), this.getBlockPos(), this.getBlockState(), this);
     }
 
     @Override
@@ -70,8 +55,9 @@ public class EnchantmentTableWithInventoryBlockEntity extends EnchantingTableBlo
     @Override
     public void setChanged() {
         super.setChanged();
-        if (this.level != null) {
-            this.level.sendBlockUpdated(this.worldPosition, this.getBlockState(), this.getBlockState(), 3);
+        if (this.hasLevel()) {
+            this.getLevel()
+                    .sendBlockUpdated(this.worldPosition, this.getBlockState(), this.getBlockState(), Block.UPDATE_ALL);
         }
     }
 
@@ -81,23 +67,13 @@ public class EnchantmentTableWithInventoryBlockEntity extends EnchantingTableBlo
     }
 
     @Override
-    public int getContainerSize() {
-        return this.items.size();
-    }
-
-    @Override
-    public boolean stillValid(Player player) {
-        return Container.stillValidBlockEntity(this, player);
-    }
-
-    @Override
     public boolean canPlaceItem(int index, ItemStack itemStack) {
         if (index == 2) {
             return itemStack.is(ModRegistry.REROLL_CATALYSTS_ITEM_TAG);
         } else if (index == 1) {
             return itemStack.is(ModRegistry.ENCHANTING_CATALYSTS_ITEM_TAG);
         } else if (index == 0) {
-            return this.items.get(0).isEmpty();
+            return this.items.getFirst().isEmpty();
         } else {
             return false;
         }
@@ -124,30 +100,10 @@ public class EnchantmentTableWithInventoryBlockEntity extends EnchantingTableBlo
     }
 
     @Override
-    public Component getDisplayName() {
-        return this.getName();
-    }
-
-    public boolean canOpen(Player player) {
-        return BaseContainerBlockEntity.canUnlock(player, this.code, this.getDisplayName());
-    }
-
-    @Nullable
-    @Override
-    public AbstractContainerMenu createMenu(int id, Inventory playerInventory, Player player) {
-        return this.canOpen(player) ? this.createMenu(id, playerInventory) : null;
-    }
-
-    @SuppressWarnings("ConstantConditions")
-    protected AbstractContainerMenu createMenu(int id, Inventory playerInventory) {
-        return new ModEnchantmentMenu(id,
+    protected AbstractContainerMenu createMenu(int containerId, Inventory playerInventory) {
+        return new ModEnchantmentMenu(containerId,
                 playerInventory,
                 this,
-                ContainerLevelAccess.create(this.level, this.worldPosition));
-    }
-
-    @Override
-    public void clientTick() {
-        bookAnimationTick(this.getLevel(), this.getBlockPos(), this.getBlockState(), this);
+                ContainerLevelAccess.create(this.getLevel(), this.worldPosition));
     }
 }
